[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "address-indexer"
version = "0.1.0"
description = "Scan an address for pressure.csv and echo CSVs; output a JSON index and summary table."
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["pandas>=2.0"]

[project.scripts]
dset-index = "indexer.main:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
